Fix stop point handling for multiple versions
[tekton-build-bot] updated version to 1.595.0

ATLAS-1438: Import reference point, initial commit.

ATLAS-1438: Continue with ReferencePoint import implementation.

ATLAS-1438: ReferencePoint Import proceed with implementation.

ATLAS-1438: WIP implement ReferencePoint import.

ATLAS-1438: Fix after rebase from master.

ATLAS-1483: Continue implementation of referencePoint import.

ATLAS-1438: First successful reference point import.

ATLAS-1438: Remove unused parts.

ATLAS-1438: Continue with the implemetation and tests.

ATLAS-1438: Add tests and scheduling part.

ATLAS-1438: Fix failing tests.

ATLAS-1438: Sonar suggestions.

ATLAS-1438: Small intellij suggested improvements.

ATLAS-1438: More sonar suggested improvements.

ATLAS-1438: Remove unused dependency.

ATLAS-1438: Remove not used reduced part of code for reference point.

ATLAS-1438: Fix small typos.

ATLAS-1438: Set local import job timeslots the same like on atlas-argocd.

[tekton-build-bot] updated version to 1.596.0

ATLAS-1438: Add missing tests and documentation.

[tekton-build-bot] updated version to 1.597.0

ATLAS-1449 pr review, removed code smells

ATLAS-1449 fixed tests

ATLAS-1449 undo

ATLAS-1449 reused remove new line

ATLAS-1449 removed duplications

ATLAS-1449 adjusted reference-point export folder

[tekton-build-bot] updated version to 1.598.0